Fix gap when a new product grid is loaded via pagination
I wanted to be able to use `.product-grid + .product-grid { margin-top: var(--grid-gap-0) }` but there empty `<div>`s in the way due to the implementation.

--- a/src/components/product/ProductGrid/product-grid.scss
+++ b/src/components/product/ProductGrid/product-grid.scss
@@ -13,7 +13,6 @@
     --gap: var(--grid-gap-0);
 
     grid-template-columns: repeat(4, 1fr);
-    margin-top: 0;
   }
 
   li {
