--- a/src/components/search/Filter/filter.scss
+++ b/src/components/search/Filter/filter.scss
@@ -2,7 +2,7 @@
 
 .filter[data-store-filter] {
   > .title-small {
-    margin-bottom: var(--space-3);
+    margin-bottom: var(--space-5);
 
     @include media("<notebook") {
       display: none;
